# welab

./: .clang-format  .gitignore  AUTHORS  CHANGELOG.md  CMakeLists.txt  README.md
cmake/: cpack_options.cmake.in  search_for_stuff.cmake  welab_cpack.cmake  welab_utils.cmake
docs/: Doxyfile  doxygen-mainpage.dox  environment-setup.md
modules/: CMakeLists.txt  conanfile.py
modules/control/: CMakeLists.txt
modules/core/: CMakeLists.txt
modules/core/include/core/geometry/: point.h
modules/core/include/core/logger/: logger-inl.h  logger.h  logger_settings.h
modules/core/include/core/macro/: macro.h
modules/core/include/core/mode/: singleton.h
modules/core/include/private/logger_p/: logger_impl.h
modules/core/pycore/: CMakeLists.txt
modules/core/pycore/src/core/: core.cpp
modules/core/pycore/src/core/logger/: logger.cpp  logger.h
modules/core/src/: logger.cpp  logger_impl.cpp
modules/core/test/: CMakeLists.txt  logger_test.cpp
modules/map/: CMakeLists.txt
modules/map/include/costmap/: cost_values.h  costmap_2d.h  costmap_2d_settings.h  footprint_collision_checker.h
modules/map/pymap/: CMakeLists.txt
modules/map/pymap/src/map/: map.cpp
modules/map/pymap/src/map/costmap/: costmap_2d.cpp  costmap_2d.h
modules/map/src/: costmap_2d.cpp  footprint_collision_checker.cpp
modules/planning/: CMakeLists.txt
modules/planning/include/smac_planner/: a_star.h  collision_checker.h  node_2d.h  node_basic.h  smac_planner_2d.h  smac_planner_types.h
modules/planning/src/: a_star.cpp  collision_checker.cpp  node_2d.cpp  node_basic.cpp
modules/planning/test/: CMakeLists.txt
scripts/linux/: env.zsh
src/: index.html  json-reducer.js  main.js  package.json  preload.js  renderer.js  renderer.jsx  styles.css  webpack.config.js
welab/: CMakeLists.txt
welab/app/: CMakeLists.txt
welab/app/welab/: CMakeLists.txt
welab/app/welab/include/welab/: restarter.hpp
welab/app/welab/src/: main.cpp
welab/common/: CMakeLists.txt
welab/common/console_bridge/: CMakeLists.txt
welab/common/console_bridge/include/console_bridge/: console.hpp
welab/common/console_bridge/src/: console.cpp
welab/common/console_bridge/test/: CMakeLists.txt  console_test.cpp  console_tutorial.cpp
welab/common/extension/: CMakeLists.txt
welab/common/extension/include/extension/: extension_global.hpp  iplugin.hpp  iplugin_p.hpp  plugin_manager.hpp  plugin_manager_p.hpp  plugin_spec.hpp  plugin_spec_p.hpp
welab/common/extension/src/: plugin_manager.cpp  plugin_spec.cpp
welab/common/macros/: CMakeLists.txt
welab/common/macros/include/macros/: class_forward.hpp  console_colors.hpp  declare_private.hpp  declare_ptr.hpp
welab/common/utils/: CMakeLists.txt
welab/common/utils/include/utils/: host_os_info.hpp  os_specific_aspects.hpp  porting.hpp  string_utils.hpp  utils_global.hpp  wl_assert.hpp  wl_settings.hpp
welab/common/utils/src/: host_os_info.cpp  string_utils.cpp  wl_assert.cpp
welab/toolbox/: CMakeLists.txt
welab/toolbox/console_bridge/: CMakeLists.txt
welab/toolbox/console_bridge/include/console_bridge/: console.hpp  console_bridge_export.hpp
welab/toolbox/console_bridge/src/: console.cpp
welab/toolbox/console_bridge/test/: CMakeLists.txt  console_test.cpp
